[gd_scene load_steps=28 format=3 uid="uid://cea8tmxsxept"]

[ext_resource type="Script" path="res://scenes/biking/scr_mail_kiosk_menu.gd" id="1_0a2qn"]
[ext_resource type="Texture2D" uid="uid://bj0rqyhomlrjn" path="res://sprites/characters/portraits/spr_front_mail_man.png" id="2_5be7v"]
[ext_resource type="Script" path="res://code/scr_dialogue_box.gd" id="2_85fyn"]
[ext_resource type="Script" path="res://code/scr_dialogue_line.gd" id="3_cwenj"]
[ext_resource type="Texture2D" uid="uid://dnllcdqtg4q84" path="res://sprites/items/spr_item_bike_helmet.png" id="3_e0yq6"]
[ext_resource type="Script" path="res://code/scr_dialogue.gd" id="4_wd8bk"]
[ext_resource type="Theme" uid="uid://wknpxv3x21lw" path="res://resources/thm_main_ui.tres" id="5_8wxff"]
[ext_resource type="Script" path="res://code/scr_textbox.gd" id="6_bw1u3"]
[ext_resource type="Texture2D" uid="uid://cvy1i8jmiqbbb" path="res://sprites/characters/portraits/spr_portrait_greg.png" id="7_tdptl"]
[ext_resource type="Script" path="res://scenes/tech/scr_reference_button.gd" id="8_cw2k1"]
[ext_resource type="Texture2D" uid="uid://da2os5pe7n7xn" path="res://sprites/gui/spr_gui.png" id="9_qnob4"]

[sub_resource type="Resource" id="Resource_m7o2u"]
script = ExtResource("3_cwenj")
text = "[color=#00ff00]hello world![/color]"
character = ""
emotion = ""
text_speed = 1.0
choice_link = &""
choices = []
instaskip = false
loop = -1
item_to_give = &""
spirit_to_give = &""
silver_to_give = 0

[sub_resource type="Resource" id="Resource_s4wuy"]
script = ExtResource("3_cwenj")
text = "[color=#00ff00]just kidding. dumbass[/color]"
character = ""
emotion = ""
text_speed = 1.0
choice_link = &""
choices = []
instaskip = false
loop = -1
item_to_give = &""
spirit_to_give = &""
silver_to_give = 0

[sub_resource type="Resource" id="Resource_yjxsy"]
script = ExtResource("3_cwenj")
text = "[color=#00ff00]remember last time?[/color]"
character = ""
emotion = ""
text_speed = 1.0
choice_link = &""
choices = []
instaskip = false
loop = -1
item_to_give = &""
spirit_to_give = &""
silver_to_give = 0

[sub_resource type="Resource" id="Resource_yugxp"]
script = ExtResource("3_cwenj")
text = "[color=#00ff00]working on the game logic was fun...[/color]"
character = ""
emotion = ""
text_speed = 1.0
choice_link = &""
choices = []
instaskip = false
loop = -1
item_to_give = &""
spirit_to_give = &""
silver_to_give = 0

[sub_resource type="Resource" id="Resource_vjws4"]
script = ExtResource("3_cwenj")
text = "[color=#00ff00]but you ground to a halt when you had to make actual gameplay.[/color]"
character = ""
emotion = ""
text_speed = 1.0
choice_link = &""
choices = []
instaskip = false
loop = -1
item_to_give = &""
spirit_to_give = &""
silver_to_give = 0

[sub_resource type="Resource" id="Resource_b5bui"]
script = ExtResource("3_cwenj")
text = "[color=#00ff00]what makes you think this time will be any different?[/color]"
character = ""
emotion = ""
text_speed = 1.0
choice_link = &""
choices = []
instaskip = false
loop = -1
item_to_give = &""
spirit_to_give = &""
silver_to_give = 0

[sub_resource type="Resource" id="Resource_b2l4m"]
script = ExtResource("4_wd8bk")
name = &"test"
lines = Array[ExtResource("3_cwenj")]([SubResource("Resource_m7o2u"), SubResource("Resource_s4wuy"), SubResource("Resource_yjxsy"), SubResource("Resource_yugxp"), SubResource("Resource_vjws4"), SubResource("Resource_b5bui")])
alias = ""

[sub_resource type="Resource" id="Resource_2tu0x"]
script = ExtResource("3_cwenj")
text = "[color=#00ff00]no, i'm not talking to you, greg.[/color]"
character = ""
emotion = ""
text_speed = 1.0
choice_link = &""
choices = []
instaskip = false
loop = -1
item_to_give = &""
spirit_to_give = &""
silver_to_give = 0

[sub_resource type="Resource" id="Resource_tcwnb"]
script = ExtResource("3_cwenj")
text = "[color=#00ff00]why would i ever talk to you?[/color]"
character = ""
emotion = ""
text_speed = 1.0
choice_link = &""
choices = []
instaskip = false
loop = -1
item_to_give = &""
spirit_to_give = &""
silver_to_give = 0

[sub_resource type="Resource" id="Resource_l1vqh"]
script = ExtResource("4_wd8bk")
name = &"test2be"
lines = Array[ExtResource("3_cwenj")]([SubResource("Resource_2tu0x"), SubResource("Resource_tcwnb")])
alias = ""

[sub_resource type="Resource" id="Resource_offmx"]
script = ExtResource("3_cwenj")
text = "[center]victory![/center]"
character = ""
emotion = ""
text_speed = 1.0
choice_link = &""
choices = []
instaskip = false
loop = -1
item_to_give = &""
spirit_to_give = &""
silver_to_give = 0

[sub_resource type="Resource" id="Resource_m10ek"]
script = ExtResource("4_wd8bk")
name = &"battle_victory"
lines = Array[ExtResource("3_cwenj")]([SubResource("Resource_offmx")])
alias = ""

[sub_resource type="Resource" id="Resource_6lgx5"]
script = ExtResource("3_cwenj")
text = "[center]level up![/center]"
character = ""
emotion = ""
text_speed = 1.0
choice_link = &""
choices = []
instaskip = false
loop = -1
item_to_give = &""
spirit_to_give = &""
silver_to_give = 0

[sub_resource type="Resource" id="Resource_3r8jb"]
script = ExtResource("3_cwenj")
text = "x leveled up to x."
character = ""
emotion = ""
text_speed = 1.0
choice_link = &""
choices = []
instaskip = false
loop = -1
item_to_give = &""
spirit_to_give = &""
silver_to_give = 0

[sub_resource type="Resource" id="Resource_3xhxu"]
script = ExtResource("4_wd8bk")
name = &"levelup"
lines = Array[ExtResource("3_cwenj")]([SubResource("Resource_6lgx5"), SubResource("Resource_3r8jb")])
alias = ""

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i3s8v"]
bg_color = Color(0, 0, 0, 1)

[node name="MailKioskMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0a2qn")

[node name="BackgroundPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 7.0
offset_right = 153.0
offset_bottom = 120.0

[node name="MailManPicture" type="Sprite2D" parent="BackgroundPanel"]
position = Vector2(64, 1)
texture = ExtResource("2_5be7v")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 80, 87)

[node name="MailManFace" type="Sprite2D" parent="BackgroundPanel"]
visible = false
position = Vector2(82, 1)
texture = ExtResource("2_5be7v")
centered = false
region_enabled = true
region_rect = Rect2(80, 0, 32, 32)

[node name="DialogueBox" type="Node2D" parent="."]
z_index = 11
position = Vector2(1, 89)
script = ExtResource("2_85fyn")
dialogues = Array[ExtResource("4_wd8bk")]([SubResource("Resource_b2l4m"), SubResource("Resource_l1vqh"), SubResource("Resource_m10ek"), SubResource("Resource_3xhxu")])
dont_close = true

[node name="DialogueBoxPanel" type="Panel" parent="DialogueBox"]
offset_left = 8.0
offset_right = 150.0
offset_bottom = 29.0
theme = ExtResource("5_8wxff")

[node name="DialogueTextbox" type="RichTextLabel" parent="DialogueBox/DialogueBoxPanel"]
layout_mode = 0
offset_left = -23.0
offset_top = 2.0
offset_right = 140.0
offset_bottom = 28.0
theme = ExtResource("5_8wxff")
scroll_active = false
script = ExtResource("6_bw1u3")

[node name="PortraitSprite" type="Sprite2D" parent="DialogueBox/DialogueBoxPanel"]
position = Vector2(-31, 3)
texture = ExtResource("7_tdptl")
centered = false

[node name="ScrollContainer" type="ScrollContainer" parent="DialogueBox/DialogueBoxPanel"]
layout_mode = 0
offset_left = 98.0
offset_top = -35.0
offset_right = 138.0
theme_override_styles/panel = SubResource("StyleBoxFlat_i3s8v")
follow_focus = true
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="ChoicesContainer" type="VBoxContainer" parent="DialogueBox/DialogueBoxPanel/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="ReferenceButton" type="Button" parent="DialogueBox/DialogueBoxPanel"]
visible = false
layout_mode = 0
offset_right = 22.0
offset_bottom = 13.0
mouse_filter = 2
text = "greg"
flat = true
alignment = 0
script = ExtResource("8_cw2k1")

[node name="FinishedMarker" type="Sprite2D" parent="DialogueBox/DialogueBoxPanel"]
position = Vector2(137, 24)
texture = ExtResource("9_qnob4")
centered = false
region_enabled = true
region_rect = Rect2(16, 1, 3, 3)

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 9.0
offset_top = 2.0
offset_right = 48.0
offset_bottom = 88.0
follow_focus = true
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="ButtonContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="ItemPanel" type="Panel" parent="."]
layout_mode = 2
offset_left = 50.0
offset_top = 2.0
offset_right = 70.0
offset_bottom = 22.0

[node name="Sprite2D" type="Sprite2D" parent="ItemPanel"]
position = Vector2(2, 2)
texture = ExtResource("3_e0yq6")
centered = false

[node name="ItemInfoLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 25.0
offset_right = 84.0
offset_bottom = 88.0
bbcode_enabled = true
text = "bike helmet
===
2929 silver"
